testsuite/tests/rename/should_fail/T19843l.hs
{-# LANGUAGE GHC2021 #-}
module T19843l where

data Foo = LongName
data FongName
wrongName = wrongName

type Bar = WrongName
